--- a/boards/c210_v2t_g431/c210_v2t_g431.dts
+++ b/boards/c210_v2t_g431/c210_v2t_g431.dts
@@ -16,7 +16,7 @@
 
 / {
 	model = "C210 SOLDORING IRON STM32G431";
-	compatible = "mao,c210_v2_g431";
+	compatible = "mao,c210_v2t_g431";
 
 	chosen {
 		zephyr,sram = &sram0;
@@ -42,7 +42,7 @@
 	};
 
     zephyr,user {
-        io-channels = <&adc2 17>;
+        io-channels = <&adc2 2>;
     };
 
 
@@ -101,7 +101,7 @@
         compatible = "pwm-leds";
         status = "okay";
         solder_heater: solder_heater {
-            pwms = <&heater_pwm 2 PWM_USEC(200) PWM_POLARITY_NORMAL>; /* TIM2_CH2 */
+            pwms = <&heater_pwm 2 PWM_USEC(50) PWM_POLARITY_NORMAL>; /* TIM3_CH2 */
             label = "SOLDER_HEATER";
         }; 
     };
@@ -138,20 +138,20 @@
 };
 
 
-/* 启用 timers2 和 PWM 子节点 */
-&timers2 {
+/* 启用 timers3 和 PWM 子节点 */
+&timers3 {
     status = "okay";
 
     heater_pwm: heater_pwm {
         compatible = "st,stm32-pwm";
         #pwm-cells = <3>;
-        pinctrl-0 = <&tim2_ch2_pa1>;
+        pinctrl-0 = <&tim3_ch2_pa4>;
         pinctrl-names = "default";
         status = "okay";
     };
 };
 
-&timers3 {
+&timers2 {
     status = "okay";
     st,prescaler = <143>;
 
@@ -309,20 +309,19 @@ stm32_lp_tick_source: &lptim1 {
 	};
 };
 
-
 &adc2 {
 	#address-cells = <1>;
 	#size-cells = <0>;
 
-	pinctrl-0 = <&adc2_in17_pa4	    /* c210 temp */
+	pinctrl-0 = <&adc2_in2_pa1	    /* c210 temp */
 		    >;
 	pinctrl-names = "default";
 	st,adc-clock-source = "SYNC";
 	st,adc-prescaler = <4>;
 	status = "okay";
 
-	channel@11 {
-		reg = <0x11>;
+	channel@2 {
+		reg = <0x02>;
 		zephyr,gain = "ADC_GAIN_1";
 		zephyr,reference = "ADC_REF_INTERNAL";
 		zephyr,vref-mv = <3300>;
@@ -331,6 +330,8 @@ stm32_lp_tick_source: &lptim1 {
         zephyr,oversampling = <4>;
 	};
 };
+
+
 
 //&dma1{
 //	status = "okay";
